# noriskclient-launcher

./: .editorconfig  .gitignore  README-REACT.md  README.md  package-lock.json  package.json
public/: index.html
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs  user.rs  zips.rs
src/auth/: Session.ts
src/components/: LandingPage.tsx  Utils.tsx
src/components/action/: StartButton.tsx  VersionButton.tsx
src/components/download/: Progress.tsx
src/components/menu/: SwitchAccount.tsx  SwitchVersion.tsx
src/components/navbar/: NavBar.tsx  SwitchAccountMenu.tsx
src/hooks/: useScript.ts
src/interfaces/: MCJson.tsx  Version.ts
