[package]
name = "noriskclient-launcher"
version = "0.1.0"
description = ""
authors = [ "NoRisk", "_F0X" ]
license = ""
repository = ""
default-run = "noriskclient-launcher"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0.61"
serde = { version = "1.0.118", features = [ "derive" ] }
tauri = { version = "0.11.0", features = [ "all-api" ] }
base64 = "0.13.0"
regex = "1.4.2"
zip = "0.5.9"
ring = "0.16.19"
data-encoding = "2.3.1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = [ "shellscalingapi" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1.11"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "noriskclient-launcher"
path = "src/main.rs"
